update sprint 2 chot

--- a/src/app/components/Register/register.component.css
+++ b/src/app/components/Register/register.component.css
@@ -1,5 +1,5 @@
 .signin-big {
-    /* background-color: rgb(236, 236, 236);     */
+    background-color: rgb(236, 236, 236);    
     /* height: 625px; */
     min-height: 300px;
 }
