--- a/src/app/components/login/login-users/login-users.component.html
+++ b/src/app/components/login/login-users/login-users.component.html
@@ -18,8 +18,8 @@
                 <input type="password"  class="form-control" formControlName="password">
             </div>
         </div>
-<div>
-        <p class="container text-center" style="color: red;">{{dataLogin}}</p>
+<div class=" container-fluid w-75">
+        <p class="container-fluid text-center" style="color: red;">{{dataLogin}}</p>
     </div>
         <div id="checkbox" class="mt-3">
             <input type="checkbox"> Nhớ tài khoản
