update angula sprin 2

--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -60,24 +60,33 @@
                                                   <label for="staticEmail" class="col-sm-4 col-form-label">Mật Khẩu Cũ<a class="text-danger">(*)</a></label>
                                                   <div class="col-sm-8">
                                                         <input type="password" class="form-control" id="current_password" placeholder="Mật Khẩu Cũ"
-                                                        name="current_password" [(ngModel)]="changepassword.current_password">
+                                                        name="current_password" [(ngModel)]="changepassword.current_password"#current_password="ngModel" required>
                                                         <p *ngIf="errors?.current_password" style="color: red;">{{errors.current_password}}</p>
+                                                        <div [hidden]="current_password.valid || current_password.pristine" class="alert alert-danger">
+                                                                Mật Khẩu Cũ không được để trống
+                                                                  </div>
                                                   </div>
                                                 </div>
                                                 <div class="form-group row">
                                                   <label for="inputPassword" class="col-sm-4 col-form-label">Mật Khẩu Mới<a class="text-danger">(*)</a></label>
                                                   <div class="col-sm-8">
                                                     <input type="password" class="form-control" id="passwordnew" placeholder="Mât Khẩu Mới"
-                                                    name="passwordnew" [(ngModel)]="changepassword.passwordnew">
+                                                    name="passwordnew" [(ngModel)]="changepassword.passwordnew"#passwordnew="ngModel" required>
                                                     <p *ngIf="errors?.passwordnew" style="color: red;">{{errors.passwordnew}}</p>
+                                                    <div [hidden]="passwordnew.valid || passwordnew.pristine" class="alert alert-danger">
+                                                            Mật Khẩu Mới không được để trống
+                                                              </div>
                                                   </div>
                                                 </div>
                                                 <div class="form-group row">
                                                         <label for="inputPassword" class="col-sm-4 col-form-label">Nhập Lại Mật Khẩu<a class="text-danger">(*)</a></label>
                                                         <div class="col-sm-8">
                                                           <input type="password" class="form-control" id="password_confirmation" placeholder="nhập lai mật khẩu"
-                                                          name="password_confirmation" [(ngModel)]="changepassword.password_confirmation">
+                                                          name="password_confirmation" [(ngModel)]="changepassword.password_confirmation"#password_confirmation="ngModel" required>
                                                           <p *ngIf="errors?.password_confirmation" style="color: red;">{{errors.password_confirmation}}</p>
+                                                          <div [hidden]="password_confirmation.valid || password_confirmation.pristine" class="alert alert-danger">
+                                                                Nhập Lại Mật Khẩu không được để trống
+                                                                  </div>
                                                         </div>
                                                 </div>
                                                   <button class="btn btn-primary" style="float: right;"(click)="save();">Lưu thay đổi</button>
