--- a/src/app/components/help/help.component.html
+++ b/src/app/components/help/help.component.html
@@ -1,38 +1,5 @@
 <!-- *********** Start Menu Bar ************ -->
-<div class="container-fluid bg-warning d-flex justify-content-center" style="position: fixed; top: 0px;z-index: 200;">
-  <div class="row px-3" style="height:45px;width: 1000px; max-width: 1000px;">
-      <div class="col-3 d-flex align-items-center">
-          <img (click)=backToListPost() src="https://static.chotot.com/storage/marketplace/nha_white_logo.png"
-              style="height: 30px;">
-      </div>
-      <div class="col-9 d-flex justify-content-end">
-          <div class="h-100 d-flex align-items-center mr-3">
-              <i class="fas fa-search mr-1" style="font-size: 20px;"></i><span style="font-size: 16px;">Tìm rao
-                  vặt</span>
-          </div>
-          <div class="h-100 d-flex align-items-center mr-3">
-              <i class="far fa-bell mr-1" style="font-size: 20px;"></i><span style="font-size: 16px;">Thông
-                  báo</span>
-          </div>
-          <div class="h-100 d-flex align-items-center mr-3">
-              <i class="far fa-comments mr-1" style="font-size: 20px;"></i><span style="font-size: 16px;">Chat</span>
-          </div>
-          <div class="h-100 d-flex align-items-center mr-3">
-              <i class="fas fa-user-circle mr-1" style="font-size: 20px;"></i><span style="font-size: 16px;">Tôi
-                  bán</span>
-          </div>
-          <div class="h-100 d-flex align-items-center mr-3">
-              <i class="fas fa-ellipsis-h mr-1" style="font-size: 25px;"></i><span style="font-size: 16px;">
-                  Thêm</span>
-          </div>
-          <div class="h-100 d-flex align-items-center">
-              <button class="btn btn-sm font-weight-bold" style="background-color: #fc9807;"><span
-                      style="color: white; font-size: 12px;">ĐĂNG
-                      TIN</span></button>
-          </div>
-      </div>
-  </div>
-</div>
+
 <!-- *********** End Menu Bar ************ -->
 
 <!-- help-->
@@ -41,37 +8,47 @@
     Liên hệ với chúng tôi
   </div>
   <ul class="list-group list-group-flush">
-      <form [formGroup]="formSendHelpMessage">
+      <form>
           <div class="form-group">
-                      <label for="exampleInputPassword1">Họ và Tên</label>
-                      <input type="hoten" class="form-control" id="exampleInputPassword1"
-                       placeholder="Họ và Tên" formControlName="fullName">
+                      <label for="exampleInputPassword1">Họ và Tên<a class="text-danger">(*)</a></label>
+                      <input type="hoten" class="form-control"
+                       placeholder="Họ và Tên" [(ngModel)]="helps.fullName"[ngModelOptions]="{standalone: true}"#fullName="ngModel" required>
+                       <div [hidden]="fullName.valid || fullName.pristine" class="alert alert-danger">
+                            họ tên không được để trống
+                              </div>
                     </div>
           <div class="form-group">
-            <label for="exampleFormControlInput1">Email:</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1"
-             placeholder="name@example.com" formControlName="email">
+            <label for="exampleFormControlInput1">Email:<a class="text-danger">(*)</a></label>
+            <input type="email" class="form-control" [(ngModel)]="helps.email"[ngModelOptions]="{standalone: true}"
+             placeholder="name@example.com" #email="ngModel"pattern='([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+'required >
+             <div [hidden]="email.valid || email.pristine" class="alert alert-danger" >
+                    không đúng định dạng email
+                 </div>
           </div>
           <div class="form-group">
-                  <label for="exampleInputPassword1">Số Điện Thoại</label>
-                  <input type="phonenumber" class="form-control" id="exampleInputPassword1"
-                   placeholder="phonenumber" formControlName="phoneNumber">
+                  <label for="exampleInputPassword1">Số Điện Thoại<a class="text-danger">(*)</a></label>
+                  <input type="phonenumber" class="form-control" [(ngModel)]="helps.phoneNumber"[ngModelOptions]="{standalone: true}"
+                   placeholder="phonenumber"  #phoneNumber="ngModel" pattern="^(([\+][8][4])|[0])([0-9]{9,10})$"required>
+                   <div [hidden]="phoneNumber.valid || phoneNumber.pristine" class="alert alert-danger">
+                        điên thoại phải theo đúng định dạng. 
+                         </div>
                 </div>
           <div class="form-group">
             <label for="exampleFormControlSelect1">Lý Do</label>
-            <select class="form-control" id="exampleFormControlSelect1" formControlName="reason">
-              <option value="1">các vấn đề giải đáp !</option>
-              <option value="2"> 2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
+            <select class="form-control"  [(ngModel)]="helps.reason"[ngModelOptions]="{standalone: true}">
+              <option value="đất bán">đất bán!</option>
+              <option value="cho thuê"> cho thuê</option>
+              <option value="cần mua">cân mua</option>
+              <option value="đăng tin">4</option>
+             
             </select>
           </div>
           <div class="form-group">
             <label for="exampleFormControlTextarea1">Nội Dung</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" formControlName="note"></textarea>
+            <textarea class="form-control" rows="3" [(ngModel)]="helps.note"[ngModelOptions]="{standalone: true}" ></textarea>
           </div>
-          <button class="btn btn-primary " style="float: right;"(click)="sendHelpMessage()">Gửi yêu cầu</button>
+          <button (click)="onadd()" >Gửi yêu cầu</button>
+          <!-- <button class="btn btn-primary " style="float: right;"(click)=" onadd()">Gửi yêu cầu</button> -->
         </form>
   </ul>
   
@@ -79,66 +56,5 @@
 
 
 <!-- ****************** Start Footer *********************** -->
-<div class="container-fluid py-5" style="background-color:#dbdbdb;">
-  <div class="row d-flex justify-content-around mx-auto" style="width: 1000px; max-width: 1000px;">
-      <div class="col-2">
-          <div>
-              <p class="font-weight-bold">Liên Kết</p>
-          </div>
 
-          <div class="d-flex align-items-center">
-              <i class="fab fa-facebook-square" style="font-size: 25px;"></i>
-              <span class="ml-2">Facebook</span>
-          </div>
-          <div class="d-flex align-items-center">
-              <i class="fab fa-google-plus-g" style="font-size: 25px;"></i>
-              <span class="ml-2">Google+</span>
-          </div>
-          <div class="d-flex align-items-center">
-              <i class="fab fa-youtube" style="font-size: 25px;"></i>
-              <span class="ml-2">Youtube</span>
-          </div>
-      </div>
-
-      <div class="col-2">
-          <p class="font-weight-bold">Bản di động</p>
-          <img class="mb-2" src="https://static.chotot.com/storage/marketplace/ios-logo.svg" alt="" height="32px">
-          <img src="https://static.chotot.com/storage/marketplace/gg-play.svg" alt="" height="32px">
-      </div>
-
-      <div class="col-3">
-          <p class="font-weight-bold mb-2">Hỗ trợ khách hàng</p>
-          <p class="my-0 py-0">Trung tâm trợ giúp</p>
-          <p class="my-0 py-0">An toàn mua bán</p>
-          <p class="my-0 py-0">Quy định cần biết</p>
-          <p class="my-0 py-0">Liên hệ hỗ trợ</p>
-      </div>
-
-      <div class="col-2">
-          <p class="font-weight-bold mb-2">Về CodeGym</p>
-          <p class="my-0 py-0">Giới thiệu</p>
-          <p class="my-0 py-0">Tuyển dụng</p>
-          <p class="my-0 py-0">Truyền thông</p>
-          <p class="my-0 py-0">Blog</p>
-      </div>
-
-      <div class="col-2">
-          <p class="font-weight-bold mb-2">Chứng nhận</p>
-          <img src="https://static.chotot.com/storage/marketplace/cerfiticate.png" alt="" height="38px">
-      </div>
-  </div>
-
-
-
-  <div class="row mx-auto mt-4 text-center d-flex justify-content-center" style="width: 1000px; max-width: 1000px;">
-      <p class="text-center" style="font-size: 13px;">
-          Công ty Đào tạo lập trình CodeGym - Địa chỉ: Tầng 10 ,Số 295 Nguyễn Tất Thành , Phường Thanh Bình, Đà Nẵng,
-          550000. <br>
-          <span>Giấy chứng nhận đăng ký doanh nghiệp số 0312120782 do Sở Kế Hoạch và Đầu Tư TP Đà Nẵng cấp ngày
-              11/01/2013</span>
-          <br>
-          <span>Email: trogiup@chotot.vn - Đường dây nóng: (084)364452261</span>
-      </p>
-  </div>
-</div>
 <!-- ****************** End Footer *********************** -->
