--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -51,7 +51,7 @@
                                 aria-hidden="true"></i><a [routerLink]="['/register']"
                                 routerLinkActive="router-link-active" style="color: white; font-size: 16px;">
                                 Dăng ký</a></li>
-                        <li class="text-center"><a href="#" style="color: white; font-size: 16px;">Trợ giúp</a></li>
+                        <li class="text-center"><a routerLink="/help" style="color: white; font-size: 16px;">Trợ giúp</a></li>
                     </ul>
 
                 </div>
