--- a/src/app/components/user/user-profile/user-profile.component.html
+++ b/src/app/components/user/user-profile/user-profile.component.html
@@ -33,8 +33,8 @@
 
 
                                 <div>
-                                    <button type="button" class="btn btn-sm btn-primary">Chỉnh sửa thông tin</button>
-                                    <button type="button" class="btn btn-sm btn-primary ml-3">Đổi mật khẩu</button>
+                                    <button type="button" class="btn btn-sm btn-primary" routerLink="/editusers">Chỉnh sửa thông tin</button>
+                                    <button type="button" class="btn btn-sm btn-primary ml-3"routerLink="/changepassword">Đổi mật khẩu</button>
                                 </div>
                             </div>
 
