su loi tim kiem nang cao routing

--- a/src/app/components/post/search-post-general/search-post-general.component.html
+++ b/src/app/components/post/search-post-general/search-post-general.component.html
@@ -155,18 +155,18 @@
             </div>
         </div>
 
-        <div class="row mt-2">
+        <!-- <div class="row mt-2">
             <div class="col-3 font-weight-bold d-flex justify-content-end"></div>
             <div class="col-9">
                 <input class="mr-2" type="checkbox" value="ableComposition" name="ableComposition"
                     formControlName="ableComposition">
                 <span>Giá có thể thỏa thuận</span>
             </div>
-        </div>
+        </div> -->
     </form>
 </mat-dialog-content>
 
-<mat-dialog-actions class="d-flex justify-content-end mb-2">
+<mat-dialog-actions class="d-flex justify-content-end mt-3 mb-2">
     <button mat-dialog-close mat-raised-button (click)="cancelSearchPostGeneral()" color="primary">Cancel</button>
     <button mat-dialog-close mat-raised-button (click)="searchPostGeneral()" color="warn">Tìm Kiếm</button>
 </mat-dialog-actions>
