--- a/src/app/components/post/post-list/post-list.component.html
+++ b/src/app/components/post/post-list/post-list.component.html
@@ -238,11 +238,11 @@
         </div>
         <!-- Start Sidebar (Top 5 bài xem nhiều nhất - Hướng ưu thích) -->
     </div>
-<!-- ************ End Body (List post and sidebar) ************ -->
+    <!-- ************ End Body (List post and sidebar) ************ -->
 
 
-<!-- ****************** Start Footer *********************** -->
-<div class="container-fluid py-5" style="background-color:#dbdbdb;">
+    <!-- ****************** Start Footer *********************** -->
+    <!-- <div class="container-fluid py-5" style="background-color:#dbdbdb;">
     <div class="row d-flex justify-content-around mx-auto" style="width: 1000px; max-width: 1000px;">
         <div class="col-2">
             <div>
@@ -302,5 +302,5 @@
             <span>Email: trogiup@chotot.vn - Đường dây nóng: (084)364452261</span>
         </p>
     </div>
-</div>
-<!-- ****************** End Footer *********************** -->
+</div> -->
+    <!-- ****************** End Footer *********************** -->
