--- a/src/app/components/admin/admin-home/admin-home.component.html
+++ b/src/app/components/admin/admin-home/admin-home.component.html
@@ -48,7 +48,8 @@
                     <span class="text-dark">Thống kê</span>
                     <i class="fas fa-chevron-left text-dark pl-2 ml-5" style="font-size: 13px;"></i>
                 </button>
-                <button type="button" class="btn btn-outline-light d-flex align-items-center justify-content-start">
+                <button [routerLink]="['/admin/setting']" type="button"
+                    class="btn btn-outline-light d-flex align-items-center justify-content-start">
                     <i class="fas fa-cog text-dark mr-2" style="width: 20px;"></i>
                     <span class="text-dark">Thiết lập</span>
                 </button>
